<resources>
    <string name="app_name">gymclub</string>
    <string name="hint_login_username">请输入手机号码(11位)</string>
    <string name="hint_login_password">输入密码</string>
    <string name="hint_login_password_again">再次确认</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="please_input_limit_pwd">请输入数字或字母</string>
    <string name="identifying_code">获取验证码</string>
    <string name="mobile_length_over_11">手机号码超过11位</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">课程</string>
    <string name="my">我的</string>
    <string name="error_login1">手机号或者密码为空</string>
    <string name="error_login2">手机号不是11位</string>
    <string name="error_login3">手机号或者密码有误</string>
    <string name="error_register">该手机号已注册</string>
    <string name="error_register1">两次密码输入不一致</string>
    <string name="title_teacher">教练</string>
    <string name="teacher_name_title">  教练名：</string>
    <string name="teacher_course_title">主教课程：</string>
    <string name="teacher_phone">联系电话：</string>
    <string name="teacher_email">邮箱地址：</string>
    <!-- Strings related to login -->
    <string name="prompt_email">输入用户名</string>
    <string name="prompt_password">输入密码</string>
    <string name="repeat_password">再次输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_up">注册</string>
    <string name="phone_tip">输入手机号</string>
    <string name="title_activity_main"></string>

    <string name="title_notifications">文章</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="introduction">出道多年，在娱乐界摸爬滚打多年，获得无数惊人的奖项，是粉丝中
        最耀眼的明珠，如今对健身事业特别感兴趣，2018年加入本APP
    </string>

</resources>
