<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_marginBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageButton
            android:id="@+id/teacher_Return_Button"
            android:layout_width="37dp"
            android:layout_height="match_parent"
            android:background="?android:attr/colorBackground"
            app:srcCompat="?attr/actionModeCloseDrawable"
            />
    </FrameLayout>
    <LinearLayout
        android:id="@+id/view_teacher_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            app:cardElevation="6dp"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/teacher_image"
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginBottom="10dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView

                            android:id="@+id/teacherNameTitle"
                            android:layout_width="155dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/teacher_name_title"
                            android:textSize="15dp"/>
                        <TextView

                            android:id="@+id/teacherName"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="0dp"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:gravity="center"

                            android:textSize="15dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/teacherCourseTitle"
                            android:layout_width="155dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="20dp"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/teacher_course_title"
                            android:textSize="15dp"/>

                        <TextView
                            android:id="@+id/teacherCourse"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="20dp"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:gravity="center"
                            android:text="腹肌锻炼"
                            android:textSize="15dp"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="6dp"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/teacherPhoneTitle"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/teacher_phone"
                    android:textSize="15dp"/>

                <TextView
                    android:id="@+id/teacherPhone"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:text=""
                    android:textSize="15dp"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="6dp"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/teacherEmailTitle"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/teacher_email"
                    android:textSize="15dp"/>

                <TextView
                    android:id="@+id/teacherEmail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:text=""
                    android:textSize="15dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>